# nova-analytics

./: .env.example  .gitignore  README.md  devserver.py  pyproject.toml
.github/workflows/: ci.yml  daily-leadgen.yml
dashboard/: app.js  index.html  styles.css
dashboard/data/: leads.json
docs/runbooks/: cloudflare-deploy.md  supabase-setup.md  vercel-deploy.md
docs/submission/: DEVELOPMENT-PROCESS.md  SUBMISSION.md  VIDEO-SCRIPT.md
docs/superpowers/plans/: 2026-04-25-greensoft-leadgen-phase1.md
docs/superpowers/specs/: 2026-04-25-greensoft-leadgen-design.md  2026-06-10-nova-analytics-whitelabel-design.md
scraper/: main.py  models.py  pipeline.py  storage.py
scraper/ai/: client.py  filter.py  linter.py  message.py  score.py
scraper/ai/prompts/: filter.txt  message.txt  score.txt
scraper/ats/: base.py  greenhouse.py  lever.py
seed/: companies.json
tests/: test_ai_client.py  test_ai_quality.py  test_ats_base.py  test_ats_dispatcher.py  test_filter.py  test_greenhouse.py  test_lever.py  test_message.py  test_message_linter.py  test_models.py  test_pipeline.py  test_score.py  test_storage.py
tests/fixtures/: golden_leads.json  greenhouse_airtable.json  lever_example.json
web/: dashboard.html  index.html  login.html  signup.html  vercel.json
web/assets/: brand.css
web/data/: leads.json
web/js/: auth.js  config.js  dashboard.js
