[project]
name = "greensoft-leadgen"
version = "0.1.0"
description = "AI-driven B2B lead generation for Greensoft Technologies"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["scraper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: tests that hit external APIs (run weekly, not per PR)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
